<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HW2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Scores">Scores</string>
    <string name="Credits">Credits</string>
    <string name="Reset">Reset</string>
    <string name="Quit">Quit</string>
    <string name="title_activity_score_board">ScoreBoardActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <item name="tag_id_player" type="id"/>
    <string name="dialogMessagePlayer1W">Congratulations Player 1 Wins</string>
    <string name="dialogMessagePlayer2W">Congratulations Player 2 Wins!!</string>
    <string name="dialogMessageDraw">No Winner!!</string>
    <string name="dialog_title">Game Results</string>
    <string name="ok">Ok</string>
    <string name="NumberOfGamesPlayed">"Number of Games Played "</string>
    <string name="playerWinningStatus">Player Winning Status</string>
    <string name="player2">Player 2:</string>
    <string name="Player1">Player1</string>
    <string name="BacktoGame">Back to Game</string>
    <string name="projectPartners">Project Partners</string>
    <string name="backToGame">Back to Game</string>
    <string name="Partner1">Sanika Joshi</string>
    <string name="Partner2">Ruchita Kshirsagar</string>

</resources>
